# PersonalDocLibraryRAGMCP

./: .gitignore  CONTRIBUTING.md  Claude.md  MULTI_DOCUMENT_SUPPORT_STATUS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SERVER_COMPARISON.md  SETUP_INFO.md  architecture.html  install_interactive_nonservicemode.sh  monitoring_report.md  pyproject.toml  quick_start.sh  requirements.txt  serve_docs.py  serviceInstall.sh  setup.sh  test_failed_tracking.py  test_simple_fix.py  test_timeout_fix.py
config/: claude_desktop_config.json  claude_desktop_config.json.template  claude_desktop_config.json.template.old  com.spiritual-library.index-monitor.plist  com.spiritual-library.index-monitor.plist.template  com.spiritual-library.webmonitor.plist  com.spiritual-library.webmonitor.plist.template
docs/: ARCHITECTURE.md  LAUNCHAGENT_PERMISSIONS_SOLUTION.md  architecture.html
scripts/: execute_fresh_indexing.sh  generate_configs.sh  index_monitor.sh  index_monitor_service.sh  indexing_status.sh  install_service.sh  install_webmonitor_service.sh  pause_indexing.sh  process_ocr_candidates.sh  resume_indexing.sh  run.sh  run_enhanced_monitor.sh  service_status.sh  setup-script.sh  start_web_monitor.sh  stop_web_monitor.sh  uninstall_service.sh  uninstall_webmonitor_service.sh  webmonitor_service.sh  webmonitor_service_status.sh
src/core/: config.py  logging_config.py  shared_rag.py  shared_rag_fixed.py
src/indexing/: clean_pdfs.py  complete_indexing.py  execute_indexing.py  handle_large_pdf.py  index_large_pdf_detailed.py  index_monitor.py  index_specific.py  manage_failed_pdfs.py  (+1 more)
(+7 files in other folders)
