[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-doc-library"
version = "0.1.0"
description = "Installable Personal Document Library MCP server and tooling"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Kenny and contributors" }
]
license = { file = "LICENSE" }
keywords = ["rag", "mcp", "documents", "personal-library"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "langchain==0.1.0",
  "langchain-community==0.0.10",
  "chromadb==0.4.22",
  "sentence-transformers>=2.2.2",
  "pypdf2==3.0.1",
  "pypdf",
  "numpy<2.0",
  "python-docx>=1.1.0",
  "openpyxl",
  "pdfminer.six",
  "beautifulsoup4>=4.11.0",
  "mobi>=0.3.3",
  "ebooklib>=0.18",
  "python-dotenv==1.0.0",
  "psutil==5.9.7",
  "flask==3.0.0",
  "watchdog>=3.0.0",
  "platformdirs>=4.0.0"
]

dynamic = []

[project.optional-dependencies]
document-processing = [
  "pypandoc==1.12",
  "unstructured==0.11.5"
]
services = [
  "python-daemon>=3.0"
]

[project.scripts]
pdlib-mcp = "personal_doc_library.servers.mcp_complete_server:main"
pdlib-indexer = "personal_doc_library.indexing.index_monitor:main"
pdlib-webmonitor = "personal_doc_library.monitoring.monitor_web_enhanced:main"
pdlib-cli = "personal_doc_library.cli:main"

[tool.hatch.build]
packages = ["src/personal_doc_library"]
